<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Schedule">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="-157dp"
        tools:layout_editor_absoluteY="-16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/message"
                android:layout_width="351dp"
                android:layout_height="52dp"
                android:layout_marginStart="28dp"
                android:layout_marginLeft="28dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="1dp"
                android:text="@string/title_schedule"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#279B86"
                android:textSize="36sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/regular"
                android:layout_width="308dp"
                android:layout_height="372dp"
                android:layout_marginStart="51dp"
                android:layout_marginLeft="51dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="52dp"
                android:layout_marginRight="52dp"
                android:layout_marginBottom="1dp"
                android:contentDescription="@string/schedule1"
                app:srcCompat="@drawable/schedule1" />

            <ImageView
                android:id="@+id/minimum"
                android:layout_width="308dp"
                android:layout_height="372dp"
                android:layout_marginStart="51dp"
                android:layout_marginLeft="51dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="52dp"
                android:layout_marginRight="52dp"
                android:layout_marginBottom="1dp"
                android:contentDescription="@string/schedule2"
                app:srcCompat="@drawable/minschedule" />

            <ImageView
                android:id="@+id/liaison"
                android:layout_width="308dp"
                android:layout_height="372dp"
                android:layout_marginStart="51dp"
                android:layout_marginLeft="51dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="52dp"
                android:layout_marginRight="52dp"
                android:layout_marginBottom="1dp"
                android:contentDescription="@string/schedule3"
                app:srcCompat="@drawable/liascheedule" />

            <ImageView
                android:id="@+id/pd"
                android:layout_width="308dp"
                android:layout_height="372dp"
                android:layout_marginStart="51dp"
                android:layout_marginLeft="51dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="52dp"
                android:layout_marginRight="52dp"
                android:layout_marginBottom="1dp"
                android:contentDescription="@string/schedule4"
                app:srcCompat="@drawable/pdschedule" />

            <ImageView
                android:id="@+id/extendedlunch"
                android:layout_width="308dp"
                android:layout_height="450dp"
                android:layout_marginStart="51dp"
                android:layout_marginLeft="51dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="52dp"
                android:layout_marginRight="52dp"
                android:layout_marginBottom="1dp"
                android:contentDescription="@string/schedule5"
                app:srcCompat="@drawable/exlunchschedule" />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>